--- a/funnel/static/sass/_schedule.scss
+++ b/funnel/static/sass/_schedule.scss
@@ -44,7 +44,7 @@
 				}
 
 				p {
-					margin: 0 0 5px;
+					margin: 0;
 				}
 
 			}
@@ -56,6 +56,7 @@
 				z-index: 2;
 				height: 100%;
 				border: 0;
+				overflow: hidden;
 			}
 
 			.schedule__row__column__content__title__duration {
